<resources>
    <string name="app_name">Field The Bern</string>
    <string name="search_hint">Search Feel The Bern</string>
    <string name="add_address">Add address</string>
    <string name="add_person">Add person</string>
    <string name="edit_person">Edit person</string>
    <string name="editing_person">Editing: %s</string>
    <string name="edit">Edit</string>
    <string name="score">Score!</string>
    <string name="points">POINTS</string>
    <string name="back_to_map">Back to map</string>
    <string name="for_knocking"><b>+%d</b> for knocking</string>
    <string name="for_updating"><b>+%d</b> for updating <b>%s\'s</b> info</string>
    <string name="new_visit">New visit</string>
    <string name="submit_visit_details">Submit visit details</string>
    <string name="start_visit_btn">Start visit</string>
    <string name="bullet_point">\u2022</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="screen_home_issues">Issues</string>
    <string name="screen_home_canvass">Canvass</string>
    <string name="main_issues_screen_title">Issues</string>
    <string name="signup_facebook">Sign up with Facebook</string>
    <string name="signup_email">Sign up with email</string>
    <string name="have_an_account">Have an account? Login.</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_email">Login with email</string>
    <string name="no_account">No account? Sign up.</string>
    <string name="please_wait">Please wait</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="preferred_contact">Prefer</string>
    <string name="password">Password</string>
    <string name="login_title">Login</string>
    <string name="signup_title">Sign up</string>
    <string name="call">Call</string>
    <string name="map">Map</string>
    <string name="continue_btn">Continue</string>
    <string name="dont_show_again">Don\'t show this message again</string>
    <string name="learn_title_2">Why do we canvass?</string>
    <string name="learn_text_2_2">Talking face-to-face allows for an earnest exchange of ideas and an opportunity to connect with others on a personal level. People are much more willing to listen when the conversation involves and affects them directly, and are therefore more likely to respond positively to Bernie’s message.</string>
    <string name="learn_text_2_1">Canvassing is one of the most effective ways to perform outreach for Bernie Sanders. Face-to-face interactions are generally much more productive than conversations over the internet or on the telephone – it’s much harder to turn someone away in real life than it is to hang up on them!</string>
    <string name="learn_title_3">What are your goals?</string>
    <string name="learn_text_3_1">Hold meaningful, interactive, and educational conversations with members of your neighborhood or community.</string>
    <string name="learn_text_3_2">Listen earnestly to others when they express their beliefs about the problems that affect them and their families.</string>
    <string name="learn_text_3_3">Discuss the most important issues facing our country and Bernie’s proposed solutions.</string>
    <string name="learn_text_3_4">Spread Bernie’s message in a way that addresses people’s concerns in an inclusive and empathetic way.</string>
    <string name="learn_text_3_5">Clean and collect data to help drive get-out-the-vote efforts on election day.</string>
    <string name="learn_text_3_6">Build our organizational network so that we can connect with supporters who want to volunteer for Bernie in the future.</string>
    <string name="learn_title_5">How do I lead a group?</string>
    <string name="learn_text_5_1">Choose your location and time to canvass, preferably in an area with many residences and with a large amount of foot traffic. Make sure you pick places that are safe, and that you canvass in the daytime with lots of remaining sunlight.</string>
    <string name="learn_text_5_2">Register your event at BernieSanders.com with as many details as possible including meeting place and the event host contact information.</string>
    <string name="learn_text_5_3">Invite folks to join your effort! Heavily advertise your canvassing event within your social circles and across social media. This involves actively recruiting people to join your volunteer team.</string>
    <string name="learn_text_5_4">Delegate and divide up responsibilities as you build your team! One person can recruit others, while another prepares canvassing materials, and someone else creates a canvassing script.</string>
    <string name="learn_text_5_5">Hold a training session before your canvassing event! Have experienced volunteers explain to the newer recruits how to prepare for a successful canvass and what to expect as they walk and talk.</string>
    <string name="learn_text_5_6">Use this app’s map feature to plan out a route. Or plan out a route beforehand that people can follow. Set a goal for the total number of houses each group should reach.</string>
    <string name="learn_text_5_7">Once you are finished planning out everything, it’s time to hit the streets! Work in pairs to cover as much ground on your route as possible.</string>
    <string name="learn_text_5_8">Use the app\'s issues tab to help you answer people’s questions about the issues; and the \"add address\" feature to record each voters’ enthusiasm toward Bernie Sanders.</string>
    <string name="learn_text_5_9">Ask people who respond enthusiastically if they are willing to help campaign for Bernie Sanders. Record all the information you can about them including their availability, skills, and interests.</string>
    <string name="learn_text_5_10">Have fun! This is a wonderful opportunity for you to meet others and talk to them about the importance of political activism. It’s also a great way to make new friends with others on your canvassing team.</string>
    <string name="learn_text_5_11">At the end of your event, make sure to debrief with your team. Take this opportunity to share your experience with others and provide feedback over refreshments. Count the total number of people you reached!</string>
    <string name="learn_title_6">What do I say?</string>
    <string name="learn_text_6_1">Here\'s a sample script you can use when starting a conversation. However, remember that canvassing is an opportunity to hold a natural conversation with another person. Try to spend more time listening to the people you reach than speaking over them. People will respond better to your message when you listen carefully.</string>
    <string name="learn_text_6_2">Canvasser: Hello, there! My name is ______, and this is my teammate, ______. We are grassroots activists who are committed to getting people registered to vote for the upcoming Presidential election. Are you registered to vote?</string>
    <string name="learn_text_6_3">If yes,</string>
    <string name="learn_text_6_4">Canvasser: Excellent! Do you know who you want to vote for President? Have you heard of Bernie Sanders? He’s an independent senator from Vermont running for the Democratic nomination. Here\'s a flyer with some information on what he stands for and why.</string>
    <string name="learn_text_6_5">If no,</string>
    <string name="learn_text_6_6">Canvasser: Alright! What issues are the most important to you in this upcoming election? What do you think the President should be focusing on? What does your ideal candidate look like?</string>
    <string name="learn_text_6_7">[The resident explains what issue(s) are important to him or her]</string>
    <string name="learn_text_6_8">Canvasser: Thanks for sharing! Have you heard of Bernie Sanders? Would you like to learn more about Bernie’s stance on [issue]? This website, FeelTheBern.org, has 51 different pages that explain Bernie’s policy positions on a variety of issues including the one you just mentioned!</string>
    <string name="learn_text_6_9">etc…</string>
    <string name="learn_text_6_10">[Listen carefully to how each resident responds to your questions]</string>
    <string name="learn_text_6_11">Canvasser: Thank you for your time! Please encourage your friends and family to register to vote in your state\'s primary elections by visiting VoteForBernie.org!</string>
    <string name="learn_text_6_12">Make sure to ask for information the campaign needs. What\'s their name? What\'s their party affiliation? How strongly do they feel about Bernie.</string>
    <string name="learn_text_6_13">Don\'t try too hard to convince people, and definitely don\'t get into an argument. You want to leave with a positive impression. If they ask you to leave, politely wish them a good day and mark that down.</string>
    <string name="learn_text_6_14">Practice this script with a friend! One person can be the canvasser and one person can be a resident. Make sure you don\'t stick too rigidly to the script or dominate the conversation. Instead, let it flow organically. Work in pairs and have each canvasser alternate speaking with the resident.</string>
    <string name="learn_title_7">Canvassing Tips</string>
    <string name="learn_text_7_1">The most important thing is to speak to as many people as possible with the time that you have. This involves keeping conversations short and to-the-point!</string>
    <string name="learn_text_7_2">Always maintain a positive attitude and interact respectfully with others. It’s more important to leave a good impression than to insist that Bernie Sanders is the best candidate or prove that someone is wrong.</string>
    <string name="learn_text_7_3">Always use open body language, maintain eye contact, and speak confidently. People will listen more eagerly it you make an effort to connect with them on a personal level and care about what they are saying.</string>
    <string name="learn_text_7_4">Always ask people if they are willing to volunteer for Bernie. Collect as much contact information from these people as possible including their home address, phone number,  email address, zip code, interests, and skills.</string>
    <string name="learn_text_7_5">Never answer a question unless you know the answer. If you are unsure about how to respond to a question, say so! Then, later, you can research the answer and make sure to follow up with the person who asked it.</string>
    <string name="learn_text_7_6">Never start an argument with anyone you meet. Some people will simply refuse to engage in meaningful discussion. Instead of getting caught up or frustrated, simply thank them for their time and disengage.</string>
    <string name="learn_text_7_7">Never place any flyers or other materials in someone’s mailbox. Not only is this a federal offense, it’s a rude invasion of privacy. People will be much more inclined to support Bernie Sanders if you hold conversation with them.</string>
    <string name="field_office_header">Field Office</string>
    <string name="field_office_msg1">Hey! It looks like you\'re close to one of our field offices:</string>
    <string name="field_office_msg2">You should stop in and volunteer to canvass with us directly. It helps us target our canvassing efforts even better, and we always love to meet our volunteers. Thanks for supporting the campaign!</string>
    <string name="phonebank_header">Phonebank</string>
    <string name="phonebank">Hey! Want to make an even bigger impact for the campaign? We\'re getting all hands on deck to phonebank into crucial early states and build momentum for the political revolution. Visit this link to make some phone calls for Bernie and get the movement going. Thanks for supporting the campaign!</string>
    <string name="phonebank_link">berniesanders.com/phonebank</string>
</resources>