<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016 - Bernie 2016, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:background="@color/bernie_dark_blue">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
      android:id="@+id/titleView"
      style="@style/LearnHeader"
      fontPath="fonts/Lato-Heavy.ttf"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/learn_title_5"
      tools:ignore="MissingPrefix" />

    <TextView
      android:id="@+id/textView"
      style="@style/LearnParagraph"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/learn_text_5_1" />

    <TextView
      android:id="@+id/textView2"
      style="@style/LearnParagraph"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/learn_text_5_2" />

    <TextView
      android:id="@+id/textView3"
      style="@style/LearnParagraph"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/learn_text_5_3" />

    <TextView
      android:id="@+id/textView4"
      style="@style/LearnParagraph"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/learn_text_5_4" />

    <TextView
      android:id="@+id/textView5"
      style="@style/LearnParagraph"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/learn_text_5_5" />

    <TextView
      android:id="@+id/textView6"
      style="@style/LearnParagraph"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/learn_text_5_6" />

    <TextView
      android:id="@+id/textView7"
      style="@style/LearnParagraph"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/learn_text_5_7" />

    <TextView
      android:id="@+id/textView8"
      style="@style/LearnParagraph"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/learn_text_5_8" />

    <TextView
      android:id="@+id/textView9"
      style="@style/LearnParagraph"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/learn_text_5_9" />

    <TextView
      android:id="@+id/textView10"
      style="@style/LearnParagraph"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/learn_text_5_10" />

    <TextView
      android:id="@+id/textView11"
      style="@style/LearnParagraph"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/learn_text_5_11" />
  </LinearLayout>
</ScrollView>
