<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:background="@color/bernie_dark_blue"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_title_3"
            style="@style/LearnHeader"
            tools:ignore="MissingPrefix"
            fontPath="fonts/Lato-Heavy.ttf"
            />
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_text_3_1"
            style="@style/LearnParagraph"
            />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_text_3_2"
            style="@style/LearnParagraph"
            />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_text_3_3"
            style="@style/LearnParagraph"
            />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_text_3_4"
            style="@style/LearnParagraph"
            />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_text_3_5"
            style="@style/LearnParagraph"
            />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_text_3_6"
            style="@style/LearnParagraph"
            />
    </LinearLayout>
</ScrollView>
