<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/learn_title_7"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/learn_title_margin_top"
            android:layout_marginBottom="@dimen/learn_title_margin_bottom"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_text_7_1"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="@dimen/learn_text_margin_top"
            android:layout_marginLeft="@dimen/learn_text_margin_left"
            android:layout_marginRight="@dimen/learn_text_margin_right"
            android:layout_marginBottom="@dimen/learn_text_margin_bottom"
            />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_text_7_2"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="@dimen/learn_text_margin_top"
            android:layout_marginLeft="@dimen/learn_text_margin_left"
            android:layout_marginRight="@dimen/learn_text_margin_right"
            android:layout_marginBottom="@dimen/learn_text_margin_bottom"
            />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_text_7_3"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="@dimen/learn_text_margin_top"
            android:layout_marginLeft="@dimen/learn_text_margin_left"
            android:layout_marginRight="@dimen/learn_text_margin_right"
            android:layout_marginBottom="@dimen/learn_text_margin_bottom"
            />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_text_7_4"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="@dimen/learn_text_margin_top"
            android:layout_marginLeft="@dimen/learn_text_margin_left"
            android:layout_marginRight="@dimen/learn_text_margin_right"
            android:layout_marginBottom="@dimen/learn_text_margin_bottom"
            />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_text_7_5"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="@dimen/learn_text_margin_top"
            android:layout_marginLeft="@dimen/learn_text_margin_left"
            android:layout_marginRight="@dimen/learn_text_margin_right"
            android:layout_marginBottom="@dimen/learn_text_margin_bottom"
            />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_text_7_6"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="@dimen/learn_text_margin_top"
            android:layout_marginLeft="@dimen/learn_text_margin_left"
            android:layout_marginRight="@dimen/learn_text_margin_right"
            android:layout_marginBottom="@dimen/learn_text_margin_bottom"
            />
        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_text_7_7"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="@dimen/learn_text_margin_top"
            android:layout_marginLeft="@dimen/learn_text_margin_left"
            android:layout_marginRight="@dimen/learn_text_margin_right"
            android:layout_marginBottom="@dimen/learn_text_margin_bottom"
            />
    </LinearLayout>
</ScrollView>